# image-grayscale-effect

./: Cargo.toml  README.md  package-lock.json  package.json  webpack.config.js
public/: index.html  main.js  styles.css
src/: lib.rs
